Make sure the interact button doesn't cover up the bee too much
Previously, it was making it hard to see the bee artwork, especially on landscape screens. We alleviate this problem by making the bee a bit higher up on the screen and the button a bit smaller.

--- a/src/app/components/play-round/play-round.component.scss
+++ b/src/app/components/play-round/play-round.component.scss
@@ -3,7 +3,7 @@
 .student-bee {
   position: absolute;
   left: 50%;
-  bottom: 0;
+  bottom: 3%;
   height: 50%;
 }
 
@@ -22,9 +22,9 @@
   bottom: 5%;
   transform: translate(-50%, 0);
 
-  // Make sure that the button is 30% width or 25% height, whichever is
+  // Make sure that the button is 35% width or 22.5% height, whichever is
   // smaller. This looks pretty good on both portrait and landscape screens.
-  $button-diameter: min(35vw, 30vh);
+  $button-diameter: min(35vw, 22.5vh);
   width: $button-diameter;
   height: $button-diameter;
 
